--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
     <meta name = "viewport" content = "width=device-width">
 
-    <meta name = "author" content = "Hardik Chauhan">
+    <meta name = "author" content = "Sivakumar Vunnam">
     {% if page.keywords %}
     <meta name = "keywords" content = "{{ page.keywords }} , {{ site.keywords }}">
     {% else %}
