--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           <a class = "page-link" href = "{{ site.data.params.archive_url }}">BLOG</a>
           <a class = "page-link" href = "{{ site.data.params.about_url }}">ABOUT</a>
           <a class = "page-link" href = "{{ site.data.params.projects_url }}">PROJECTS</a>
-          <a class = "page-link" href = "{{ site.data.params.projects_url }}">EXPERIENCE</a>
+          <a class = "page-link" href = "{{ site.data.params.experience_url }}">EXPERIENCE</a>
           
       </div>
     </nav>
