--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,6 +199,38 @@ body {
   color: #508cda;
 }
 
+.experiences {
+  font-size: 0.9em;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  list-style: none;
+}
+
+.experience {
+  margin: 40px 0px;
+  padding-bottom: 20px;
+}
+
+.experience-name {
+  padding: 10px;
+  font-size: 1.3em;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+}
+
+.experience-name a {
+  color: #205caa;
+  padding-bottom: 2px;
+  border-bottom: 1px dashed #205caa;
+}
+
+.experience-name a:visited {
+  color: #205caa;
+}
+
+.experience-name a:hover {
+  color: #508cda;
+}
 
 
 #gpg-fingerprint {
