css for experience

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,6 +232,47 @@ body {
   color: #508cda;
 }
 
+.experience-description {
+  padding-top: 10px;
+  padding-left: 30px;
+}
+
+.experience-description li {
+  margin-bottom: 5px;
+}
+
+.experience-tech {
+  margin-left: 14px;
+}
+
+.experience-tech span {
+  padding-bottom: 2px;
+  font-weight: bold;
+}
+
+.experience-tech .experience-padding {
+  visibility: hidden;
+}
+
+.experience-source a {
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 5px;
+  float: right;
+  margin-right: 2%;
+  position: relative;
+  bottom: 13px;
+  color: #205caa;
+}
+
+.experience-source a:visited {
+  color: #205caa;
+}
+
+.experience-source a:hover {
+  color: #508cda;
+}
+
 
 #gpg-fingerprint {
   display: block;
